--- a/week1/mywebsite.html
+++ b/week1/mywebsite.html
@@ -26,21 +26,15 @@
     <div class="promo">
         <div class="promo_item">
             <img src="pic.jpg" class="promo_pic" />
-            <div class="promo_text">
-                Promotion 1
-            </div>
+            <div class="promo_text">Promotion 1</div>
         </div>
         <div class="promo_item">
             <img src="pic.jpg" class="promo_pic" />
-            <div class="promo_text">
-                Promotion 2
-            </div>
+            <div class="promo_text">Promotion 2</div>
         </div>
         <div class="promo_item">
             <img src="pic.jpg" class="promo_pic" />
-            <div class="promo_text">
-                Promotion 3
-            </div>
+            <div class="promo_text">Promotion 3</div>
         </div>
     </div>
 
@@ -48,103 +42,53 @@
     
     <div class="box">
         <div class="box_item">
-            <div>
-                <img src="pic.jpg" class="box_pic" />
-            </div>
-            <div class="box_text">
-                Title 1
-            </div> 
+            <img src="pic.jpg" class="box_pic" />
+            <div class="box_text">Title 1</div> 
         </div>
         <div class="box_item">
-            <div>
-                <img src="pic.jpg" class="box_pic" />
-            </div>
-            <div class="box_text">
-                Title 2
-            </div> 
+            <img src="pic.jpg" class="box_pic" />
+            <div class="box_text">Title 2</div> 
         </div>
         <div class="box_item">
-            <div>
-                <img src="pic.jpg" class="box_pic" />
-            </div>
-            <div class="box_text">
-                Title 3
-            </div> 
+            <img src="pic.jpg" class="box_pic" />
+            <div class="box_text">Title 3</div> 
         </div>
         <div class="box_item">
-            <div>
-                <img src="pic.jpg" class="box_pic" />
-            </div>
-            <div class="box_text">
-                Title 4
-            </div> 
+            <img src="pic.jpg" class="box_pic" />
+            <div class="box_text">Title 4</div> 
         </div>
         <div class="box_item">
-            <div>
-                <img src="pic.jpg" class="box_pic" />
-            </div>
-            <div class="box_text">
-                Title 5
-            </div> 
+            <img src="pic.jpg" class="box_pic" />
+            <div class="box_text">Title 5</div> 
         </div>
         <div class="box_item">
-            <div>
-                <img src="pic.jpg" class="box_pic" />
-            </div>
-            <div class="box_text">
-                Title 6
-            </div> 
+            <img src="pic.jpg" class="box_pic" />
+            <div class="box_text">Title 6</div> 
         </div>
         <div class="box_item">
-            <div>
-                <img src="pic.jpg" class="box_pic" />
-            </div>
-            <div class="box_text">
-                Title 7
-            </div> 
+            <img src="pic.jpg" class="box_pic" />
+            <div class="box_text">Title 7</div> 
         </div>
         <div class="box_item">
-            <div>
-                <img src="pic.jpg" class="box_pic" />
-            </div>
-            <div class="box_text">
-                Title 8
-            </div> 
+            <img src="pic.jpg" class="box_pic" />
+            <div class="box_text">Title 8</div> 
         </div>
         <div class="box_item">
-            <div>
-                <img src="pic.jpg" class="box_pic" />
-            </div>
-            <div class="box_text">
-                Title 9
-            </div> 
+            <img src="pic.jpg" class="box_pic" />
+            <div class="box_text">Title 9</div> 
         </div>
         <div class="box_item">
-            <div>
-                <img src="pic.jpg" class="box_pic" />
-            </div>
-            <div class="box_text">
-                Title 10
-            </div> 
+            <img src="pic.jpg" class="box_pic" />
+            <div class="box_text">Title 10</div> 
         </div>
         <div class="box_item">
-            <div>
-                <img src="pic.jpg" class="box_pic" />
-            </div>
-            <div class="box_text">
-                Title 11
-            </div> 
+            <img src="pic.jpg" class="box_pic" />
+            <div class="box_text">Title 11</div> 
         </div>
         <div class="box_item">
-            <div>
-                <img src="pic.jpg" class="box_pic" />
-            </div>
-            <div class="box_text">
-                Title 12
-            </div> 
+            <img src="pic.jpg" class="box_pic" />
+            <div class="box_text">Title 12</div> 
         </div>
-
-        
     </div>
   </body>
 </html>
