--- a/week1/mywebsite.html
+++ b/week1/mywebsite.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="mywebsite.css">
   </head>
   <body>
-    <div class="title">
+    <div class="header">
         <span style="font-weight: bold;">My Website</span>
         <nav class="desktop_menu">
             <a href="">Item1</a> 
