git commit -m "sidebar"

--- a/week1/mywebsite.html
+++ b/week1/mywebsite.html
@@ -14,7 +14,18 @@
             <a href="">Item4</a>
         </nav>
         <span class="mobile_menu">
-            <img src="hamburger.png" width="40" height="40"/>
+            <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu"/>
+            <label for="openSidebarMenu" class="sidebarIcon">
+                <img src="hamburger.png" width="40" height="40"/>
+            </label>
+            <div id="sidebarMenu">
+                <ul class="sidebarMenuInner">
+                    <li><a href="">Item1</a></li>
+                    <li><a href="">Item2</a></li>
+                    <li><a href="">Item3</a></li>
+                    <li><a href="">Item4</a></li>
+                </ul>
+            </div>
         </span>
     </div>
     <div class="banner">
