git commit -m "star&text"

--- a/week1/mywebsite.html
+++ b/week1/mywebsite.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="header">
-        <span style="font-weight: bold;">My Website</span>
+        <span style="font-weight: bold;">&ensp;My Website</span>
         <nav class="desktop_menu">
             <a href="">Item1</a> 
             <a href="">Item2</a>
@@ -54,50 +54,62 @@
     <div class="box">
         <div class="box_item">
             <img src="pic.jpg" class="box_pic" />
+            <img src="star.png" class="star_pic" />
             <div class="box_text">Title 1</div> 
         </div>
         <div class="box_item">
             <img src="pic.jpg" class="box_pic" />
+            <img src="star.png" class="star_pic" />
             <div class="box_text">Title 2</div> 
         </div>
         <div class="box_item">
             <img src="pic.jpg" class="box_pic" />
+            <img src="star.png" class="star_pic" />
             <div class="box_text">Title 3</div> 
         </div>
         <div class="box_item">
             <img src="pic.jpg" class="box_pic" />
+            <img src="star.png" class="star_pic" />
             <div class="box_text">Title 4</div> 
         </div>
         <div class="box_item">
             <img src="pic.jpg" class="box_pic" />
+            <img src="star.png" class="star_pic" />
             <div class="box_text">Title 5</div> 
         </div>
         <div class="box_item">
             <img src="pic.jpg" class="box_pic" />
+            <img src="star.png" class="star_pic" />
             <div class="box_text">Title 6</div> 
         </div>
         <div class="box_item">
             <img src="pic.jpg" class="box_pic" />
+            <img src="star.png" class="star_pic" />
             <div class="box_text">Title 7</div> 
         </div>
         <div class="box_item">
             <img src="pic.jpg" class="box_pic" />
+            <img src="star.png" class="star_pic" />
             <div class="box_text">Title 8</div> 
         </div>
         <div class="box_item">
             <img src="pic.jpg" class="box_pic" />
+            <img src="star.png" class="star_pic" />
             <div class="box_text">Title 9</div> 
         </div>
         <div class="box_item">
             <img src="pic.jpg" class="box_pic" />
+            <img src="star.png" class="star_pic" />
             <div class="box_text">Title 10</div> 
         </div>
         <div class="box_item">
             <img src="pic.jpg" class="box_pic" />
+            <img src="star.png" class="star_pic" />
             <div class="box_text">Title 11</div> 
         </div>
         <div class="box_item">
             <img src="pic.jpg" class="box_pic" />
+            <img src="star.png" class="star_pic" />
             <div class="box_text">Title 12</div> 
         </div>
     </div>
